fixed spacing for mobile menu button

--- a/assets/less/jomi/header.less
+++ b/assets/less/jomi/header.less
@@ -11,7 +11,8 @@ nav.site-header{
 
    .navbar-header{
       button.navbar-toggle{
-         margin-right:60px;
+         //margin-right:60px;
+         right: 40px;
          margin-top: 15px;
       }
       .logo{
